--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-
-inventory = /home/pavel/ansible/inventory.yml
-host_key_checking = false
+inventory = inventory.yml
+host_key_checking = False
+deprecation_warnings = False
